# VoidLink

./: .env.example  README.md  keys_v3.txt  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  release.txt
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: AuthModal.vue  ServerPerformance.vue  ServerTypeCard.vue  TunnelManagerModal.vue  WindowControls.vue
app/composables/: useAutoUpdate.ts  useBackupStore.ts  useJava.ts  useServerProcessStore.ts  useTray.ts  useUpdateChecker.ts
app/layouts/: default.vue
app/pages/: create.vue  index.vue  settings.vue
app/pages/server/: [id].vue
app/stores/: useAuthStore.ts  useServersStore.ts  useSettingsStore.ts  useTunnelStore.ts
app/utils/: ansiParser.ts  fileIcons.ts  javaDetection.ts  javaVersions.ts  modpack.ts  version.ts
docs/: index.html  install.sh
src-tauri/: Cargo.toml  eula.txt  server.properties  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/.compiled-icon/: Assets.car  partial-info.plist  voidlink.icns
src-tauri/src/: backup.rs  frp.rs  java.rs  lib.rs  rcon.rs  utils.rs
