[package]
name = "void-link"
version = "0.3.15"
description = "VoidLink minecraft server dashboard"
authors = ["MakotoPD"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-http = "2.5.4"
tauri-plugin-shell = "2.3.3"
sysinfo = "0.32"
local-ip-address = "0.6"
tauri-plugin-dialog = "2.4.2"
dirs = "5"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
rcon = { version = "0.6", features = ["rt-tokio"] }
tokio = { version = "1", features = ["net", "io-util"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
anyhow = "1.0"
flate2 = "1.0"
tar = "0.4"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
